testdata/baselines/reference/submodule/conformance/taggedTemplateStringsWithOverloadResolution3_ES6.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2318: Cannot find global type 'TemplateStringsArray'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
taggedTemplateStringsWithOverloadResolution3_ES6.ts(2,20): error TS2304: Cannot find name 'TemplateStringsArray'.
taggedTemplateStringsWithOverloadResolution3_ES6.ts(3,20): error TS2304: Cannot find name 'TemplateStringsArray'.
taggedTemplateStringsWithOverloadResolution3_ES6.ts(9,9): error TS2769: No overload matches this call.
  The last overload gave the following error.
    Argument of type '{}' is not assignable to parameter of type 'number'.
taggedTemplateStringsWithOverloadResolution3_ES6.ts(11,20): error TS2304: Cannot find name 'TemplateStringsArray'.
taggedTemplateStringsWithOverloadResolution3_ES6.ts(12,23): error TS2304: Cannot find name 'TemplateStringsArray'.
taggedTemplateStringsWithOverloadResolution3_ES6.ts(15,9): error TS2304: Cannot find name 'Date'.
taggedTemplateStringsWithOverloadResolution3_ES6.ts(28,23): error TS2304: Cannot find name 'TemplateStringsArray'.
taggedTemplateStringsWithOverloadResolution3_ES6.ts(29,26): error TS2304: Cannot find name 'TemplateStringsArray'.
taggedTemplateStringsWithOverloadResolution3_ES6.ts(30,29): error TS2304: Cannot find name 'TemplateStringsArray'.
taggedTemplateStringsWithOverloadResolution3_ES6.ts(44,1): error TS2554: Expected 2-4 arguments, but got 1.
taggedTemplateStringsWithOverloadResolution3_ES6.ts(47,56): error TS2304: Cannot find name 'TemplateStringsArray'.
taggedTemplateStringsWithOverloadResolution3_ES6.ts(48,56): error TS2304: Cannot find name 'TemplateStringsArray'.
taggedTemplateStringsWithOverloadResolution3_ES6.ts(49,20): error TS2304: Cannot find name 'TemplateStringsArray'.
taggedTemplateStringsWithOverloadResolution3_ES6.ts(62,9): error TS2769: No overload matches this call.
  The last overload gave the following error.
    Argument of type 'boolean' is not assignable to parameter of type 'number'.
taggedTemplateStringsWithOverloadResolution3_ES6.ts(63,18): error TS2769: No overload matches this call.
  The last overload gave the following error.
    Argument of type 'boolean' is not assignable to parameter of type 'string'.
taggedTemplateStringsWithOverloadResolution3_ES6.ts(66,20): error TS2304: Cannot find name 'TemplateStringsArray'.
taggedTemplateStringsWithOverloadResolution3_ES6.ts(67,20): error TS2304: Cannot find name 'TemplateStringsArray'.
taggedTemplateStringsWithOverloadResolution3_ES6.ts(69,18): error TS2339: Property 'toFixed' does not exist on type 'string'.
taggedTemplateStringsWithOverloadResolution3_ES6.ts(70,18): error TS2339: Property 'substr' does not exist on type 'string'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2318: Cannot find global type 'TemplateStringsArray'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== taggedTemplateStringsWithOverloadResolution3_ES6.ts (19 errors) ====
    // Ambiguous call picks the first overload in declaration order
    function fn1(strs: TemplateStringsArray, s: string): string;
                       ~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'TemplateStringsArray'.
    function fn1(strs: TemplateStringsArray, n: number): number;
                       ~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'TemplateStringsArray'.
    function fn1() { return null; }
    
    var s: string = fn1 `${ undefined }`;
    
    // No candidate overloads found
    fn1 `${ {} }`; // Error
            ~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   The last overload gave the following error.
!!! error TS2769:     Argument of type '{}' is not assignable to parameter of type 'number'.
!!! related TS2771 taggedTemplateStringsWithOverloadResolution3_ES6.ts:3:10: The last overload is declared here.
    
    function fn2(strs: TemplateStringsArray, s: string, n: number): number;
                       ~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'TemplateStringsArray'.
    function fn2<T>(strs: TemplateStringsArray, n: number, t: T): T;
                          ~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'TemplateStringsArray'.
    function fn2() { return undefined; }
    
    var d1: Date = fn2 `${ 0 }${ undefined }`; // contextually typed
            ~~~~
!!! error TS2304: Cannot find name 'Date'.
    var d2 = fn2 `${ 0 }${ undefined }`; // any
    
    d1.foo(); // error
    d2();     // no error (typed as any)
    
    // Generic and non-generic overload where generic overload is the only candidate
    fn2 `${ 0 }${ '' }`; // OK
    
    // Generic and non-generic overload where non-generic overload is the only candidate
    fn2 `${ '' }${ 0 }`; // OK
    
    // Generic overloads with differing arity
    function fn3<T>(strs: TemplateStringsArray, n: T): string;
                          ~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'TemplateStringsArray'.
    function fn3<T, U>(strs: TemplateStringsArray, s: string, t: T, u: U): U;
                             ~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'TemplateStringsArray'.
    function fn3<T, U, V>(strs: TemplateStringsArray, v: V, u: U, t: T): number;
                                ~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'TemplateStringsArray'.
    function fn3() { return null; }
    
    var s = fn3 `${ 3 }`;
    var s = fn3 `${'' }${ 3 }${ '' }`;
    var n = fn3 `${ 5 }${ 5 }${ 5 }`;
    var n: number;
    
    // Generic overloads with differing arity tagging with arguments matching each overload type parameter count
    var s = fn3 `${ 4 }`
    var s = fn3 `${ '' }${ '' }${ '' }`;
    var n = fn3 `${ '' }${ '' }${ 3 }`;
    
    // Generic overloads with differing arity tagging with argument count that doesn't match any overload
    fn3 ``; // Error
    ~~~~~~
!!! error TS2554: Expected 2-4 arguments, but got 1.
!!! related TS6210 taggedTemplateStringsWithOverloadResolution3_ES6.ts:28:45: An argument for 'n' was not provided.
    
    // Generic overloads with constraints
    function fn4<T extends string, U extends number>(strs: TemplateStringsArray, n: T, m: U);
                                                           ~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'TemplateStringsArray'.
    function fn4<T extends number, U extends string>(strs: TemplateStringsArray, n: T, m: U);
                                                           ~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'TemplateStringsArray'.
    function fn4(strs: TemplateStringsArray)
                       ~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'TemplateStringsArray'.
    function fn4() { }
    
    // Generic overloads with constraints tagged with types that satisfy the constraints
    fn4 `${ '' }${ 3  }`;
    fn4 `${ 3  }${ '' }`;
    fn4 `${ 3  }${ undefined }`;
    fn4 `${ '' }${ null }`;
    
    // Generic overloads with constraints called with type arguments that do not satisfy the constraints
    fn4 `${ null }${ null }`; // Error
    
    // Generic overloads with constraints called without type arguments but with types that do not satisfy the constraints
    fn4 `${ true }${ null }`;
            ~~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   The last overload gave the following error.
!!! error TS2769:     Argument of type 'boolean' is not assignable to parameter of type 'number'.
!!! related TS2771 taggedTemplateStringsWithOverloadResolution3_ES6.ts:48:10: The last overload is declared here.
    fn4 `${ null }${ true }`;
                     ~~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   The last overload gave the following error.
!!! error TS2769:     Argument of type 'boolean' is not assignable to parameter of type 'string'.
!!! related TS2771 taggedTemplateStringsWithOverloadResolution3_ES6.ts:48:10: The last overload is declared here.
    
    // Non - generic overloads where contextual typing of function arguments has errors
    function fn5(strs: TemplateStringsArray, f: (n: string) => void): string;
                       ~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'TemplateStringsArray'.
    function fn5(strs: TemplateStringsArray, f: (n: number) => void): number;
                       ~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'TemplateStringsArray'.
    function fn5() { return undefined; }
    fn5 `${ (n) => n.toFixed() }`; // will error; 'n' should have type 'string'.
                     ~~~~~~~
!!! error TS2339: Property 'toFixed' does not exist on type 'string'.
    fn5 `${ (n) => n.substr(0) }`;
                     ~~~~~~
!!! error TS2339: Property 'substr' does not exist on type 'string'.
    
    